# kaggle

./: .gitignore  .pre-commit-config.yaml  Dockerfile  compose.env.example  docker-compose.yaml  example_logs.json  kaggle_challenge.MD  manage.sh  readme.MD
downloader/: main.py  pyproject.toml
downloader/data_output/: data_output.py  output_views_to_categories.py
downloader/data_retrieve/: data_retrieve.py  kaggle_retrieve.py
downloader/logger/: logger.py
downloader/tests/data_output/: test_output_views_to_categories.py
downloader/transform/: transform.py  transform_views_to_categories.py
