[tool.poetry]
name = "downloader"
version = "0.1.0"
description = ""
authors = ["David <david@sulaco.co.uk>"]
package-mode = false

[tool.poetry.dependencies]
python="^3.11"
pandas=">=2.2,<3.0"
python-dotenv=">=1.0,<2.0"
kaggle = "^1.7.4.5"
matplotlib = "^3.10.3"

[tool.poetry.dev-dependencies]
pytest=">=8.1,<9.0"
pytest-cov=">=5.0,<6.0"
factory-boy=">=3.3,<4.0"
mypy=">=1.10,<2.0"
types-requests = "^2.32.0.20250602"

[tool.pytest.ini_options]
addopts = ""
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = "*.py"
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
exclude_gitignore = true
explicit_package_bases = true

[tool.black]
include = '\.py?$'
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
skip_gitignore = true
sections='''
FUTURE,
STDLIB,
THIRDPARTY,
FIRSTPARTY,
LOCALFOLDER,
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
